// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render with props 1`] = `
<div class="HeadUpBoards flex-grow overflow-hidden">
  <div id="board-1" class="Board">
    <transition-stub name="slideDown">
      <!---->
    </transition-stub>
    <div class="cells" style="grid-template-areas: 'a';">
      <div class="Cell">
        <header class="header">
          <h2 class="title">Cell #1</h2>
          <!---->
        </header>
        <div class="body-wrapper">
          <div class="body" style="grid-template-areas: 'a';"></div>
          <transition-stub name="revealSettings">
            <!---->
          </transition-stub>
        </div>
      </div>
      <div class="Cell">
        <header class="header">
          <h2 class="title">Cell #2</h2>
          <!---->
        </header>
        <div class="body-wrapper">
          <div class="body" style="grid-template-areas: 'a';"></div>
          <transition-stub name="revealSettings">
            <!---->
          </transition-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render with slot and props 1`] = `
<div class="HeadUpBoards flex-grow overflow-hidden">
  <div id="board-1" class="Board">
    <transition-stub name="slideDown">
      <!---->
    </transition-stub>
    <div class="cells" style="grid-template-areas: 'a';">
      <div class="Cell">
        <header class="header">
          <h2 class="title">Cell #1</h2>
          <!---->
        </header>
        <div class="body-wrapper">
          <div class="body" style="grid-template-areas: 'a';"></div>
          <transition-stub name="revealSettings">
            <!---->
          </transition-stub>
        </div>
      </div>
      <div class="Cell">
        <header class="header">
          <h2 class="title">Cell #2</h2>
          <!---->
        </header>
        <div class="body-wrapper">
          <div class="body" style="grid-template-areas: 'a';"></div>
          <transition-stub name="revealSettings">
            <!---->
          </transition-stub>
        </div>
      </div>
    </div>
  </div>
  <div id="board-b1" class="Board">
    <transition-stub name="slideDown">
      <!---->
    </transition-stub>
    <div class="cells" style="grid-template-areas: 'a';">
      <div class="Cell" style="grid-area: a;">
        <header class="header">
          <h2 class="title">Cell #1</h2>
          <!---->
        </header>
        <div class="body-wrapper">
          <div class="body" style="grid-template-areas: 'a';"></div>
          <transition-stub name="revealSettings">
            <!---->
          </transition-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render with slots 1`] = `
<div class="HeadUpBoards flex-grow overflow-hidden">
  <div id="board-b1" class="Board">
    <transition-stub name="slideDown">
      <!---->
    </transition-stub>
    <div class="cells" style="grid-template-areas: 'a';">
      <div class="Cell" style="grid-area: a;">
        <header class="header">
          <h2 class="title">Cell #1</h2>
          <!---->
        </header>
        <div class="body-wrapper">
          <div class="body" style="grid-template-areas: 'a';"></div>
          <transition-stub name="revealSettings">
            <!---->
          </transition-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;
